force-app/main/default/objects/Lease__c/fields/Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date__c</fullName>
    <label>Lease Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField> 