force-app/main/default/objects/Lease__c/fields/Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status__c</fullName>
    <label>Lease Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 